[gd_scene load_steps=9 format=3 uid="uid://ddnukyotbyv38"]

[ext_resource type="Script" path="res://scripts/node.gd" id="1_jo07h"]
[ext_resource type="Shader" path="res://shaders/circle_shader.gdshader" id="1_mt01g"]
[ext_resource type="Shader" path="res://shaders/border_radius.gdshader" id="2_826gq"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ktlb4"]
shader = ExtResource("2_826gq")
shader_parameter/corner_scale = 0.809

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0aaol"]
shader = ExtResource("1_mt01g")
shader_parameter/radius = 1.0
shader_parameter/animate = false
shader_parameter/square_scale = 0.5

[sub_resource type="SystemFont" id="SystemFont_c6x58"]
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_vivoa"]
font = SubResource("SystemFont_c6x58")
font_size = 160
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pb2p2"]
bg_color = Color(0, 0, 0, 0.764706)

[node name="Node" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jo07h")

[node name="border" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="node_style" type="ColorRect" parent="border"]
visible = false
material = SubResource("ShaderMaterial_ktlb4")
clip_contents = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.916609, 0, 0.126243, 1)

[node name="triangle_style" type="Polygon2D" parent="border"]
position = Vector2(-6, -4)
scale = Vector2(1.3, 1.2)
color = Color(0.780392, 0.211765, 0.258824, 1)

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_0aaol")
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Polygon2D" type="Polygon2D" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_right = 400.0
offset_bottom = 400.0
scale = Vector2(0.1, 0.1)

[node name="lbl_value" type="Label" parent="CenterContainer"]
z_index = 1
texture_filter = 1
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 0
label_settings = SubResource("LabelSettings_vivoa")
horizontal_alignment = 1
vertical_alignment = 1

[node name="lbl_alphaBeta" type="Label" parent="."]
z_index = 1
texture_filter = 1
layout_mode = 0
offset_left = 40.0
offset_top = -9.0
offset_right = 75.0
offset_bottom = 40.0
scale = Vector2(0.1, 0.1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.333333)
theme_override_constants/shadow_offset_x = 10
theme_override_constants/shadow_offset_y = 5
theme_override_font_sizes/font_size = 75
text = "α =
β ="

[node name="LineEdit" type="LineEdit" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 1.68
anchor_top = -0.128
anchor_right = 1.68
anchor_bottom = -0.128
offset_left = -28.2
offset_top = -10.88
offset_right = 347.8
offset_bottom = 134.12
scale = Vector2(0.15, 0.15)
theme_override_constants/caret_width = 5
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_pb2p2")
alignment = 1
caret_blink = true

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="text_submitted" from="LineEdit" to="." method="_on_line_edit_text_submitted"]
